--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -4,4 +4,5 @@ spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 
+hibernate.dialect=org.hibernate.dialect.H2Dialect
 flyway.enabled=false
