Modificado metodos de exclusao de usuarios e servidores.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
+server.port = 8090
+
 flyway.baseline-on-migrate=true
