Alteracoes nas entidades, criado novos DTOs e Controllers.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.jpa.properties.hibernate.type=trace
 
 server.port = 8090
 
-flyway.baseline-on-migrate=true
+flyway.enabled = true
+flyway.locations= classpath:db/migration/mysql
